adding to the guess the number game

--- a/GuessTheNumber/index.html
+++ b/GuessTheNumber/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <header>
-      <h1>Guess My Number!</h1>
+      <h1 class="header">Guess My Number!</h1>
       <p class="between">(Between 1 and 20)</p>
-      <button class="btn again">Again!</button>
+      <button class="btn again">Go Again</button>
       <div class="number">?</div>
     </header>
     <main>
@@ -25,6 +25,7 @@
         <p class="label-highscore">
           🥇 Highscore: <span class="highscore">0</span>
         </p>
+        <p class="label-tries">🔢 Tries left: <span class="tries">5</span>/5</p>
       </section>
     </main>
   </body>
