--- a/dom_manipulation/exercise2/bubling.html
+++ b/dom_manipulation/exercise2/bubling.html
@@ -11,7 +11,22 @@
     <title>Exercise 2</title>
 </head>
 <body>
-    <div id="div1" class="mydiv"></div>
-    <div id="div2" class="mydiv"></div>
+    <div id="outer">
+        <div id="div1" class="mydiv"></div>
+        <div id="div2" class="mydiv"></div>
+
+        <div id="div3" class="mydiv"></div>
+        <div id="div4" class="mydiv"></div>
+        <div id="div5" class="mydiv"></div>
+        <div id="div6" class="mydiv"></div>
+        <div id="div7" class="mydiv"></div>
+        <div id="div8" class="mydiv"></div>
+        <div id="div9" class="mydiv"></div>
+        <div id="div10" class="mydiv"></div>
+        <div id="div11" class="mydiv"></div>
+        <div id="div12" class="mydiv"></div>
+    </div>
+
+    <p id="para"></p>
 </body>
 </html>
