fixing exercise 3 - can't add an empty name

--- a/dom_manipulation/exercise3and4/table.html
+++ b/dom_manipulation/exercise3and4/table.html
@@ -18,9 +18,12 @@
         <button type="submit" onclick="addName(event)">Add name</button> <button type="submit" onclick="removeFirst(event)">Remove first</button> <button type="submit" onclick="removeLast(event)">Remove last</button>
     </form>
 
+    <!--List used to add and remove names-->
     <div id="list">
-
     </div>
+
+    <hr>
+
 
 </body>
 </html>
