--- a/dom_manipulation/exercise5/calculator.html
+++ b/dom_manipulation/exercise5/calculator.html
@@ -4,32 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
   </head>
-  <style>
-    #container {
-      width: 226px;
-      height: 274px;
-      border: 3px solid darkblue;
-      margin: auto;
-    }
-    .t1,
-    .t4 {
-      border: 1px solid black;
-      height: 48px;
-      margin-left: 3px;
-      margin-top: 3px;
-      display: inline-block;
-      text-align: center;
-      line-height: 48px;
-    }
-    .t1 {
-      width: 48px;
-    }
-    .t4 {
-      width: 219px;
-    }
-  </style>
   <body>
     <div id="container">
       <div id="display" class="t4"></div>
