--- a/dom_manipulation/exercise5/calculator.html
+++ b/dom_manipulation/exercise5/calculator.html
@@ -33,6 +33,7 @@
         <div id="calculate" class="t1">=</div>
       </div>
     </div>
+    <button id="clear">Clear</button>
   </body>
 
   <script></script>
