working on thurdays exercise

--- a/simpleViteJSApplication/index.html
+++ b/simpleViteJSApplication/index.html
@@ -20,6 +20,11 @@
             <h3>Exercise 1</h3>
             <p>Add your basic HTML for Exercise 1 here</p>
             <ul id="jokes"></ul>
+            <form action="#">
+                <input id="inputJokeId" type="number">
+                <button id="getJoke">GET JOKE</button>
+                <p id="joke"></p>
+            </form>
         </div>
 
         <!-- End of HTML for exercise-1 -->
