can now add a new joke

--- a/simpleViteJSApplication/index.html
+++ b/simpleViteJSApplication/index.html
@@ -25,6 +25,12 @@
                 <button id="getJoke">GET JOKE</button>
                 <p id="joke"></p>
             </form>
+            
+            <form action="#">
+                <input id="inputJokeText" type="text">
+                <button id="addJoke">Add joke</button>
+                <p id="message"></p>
+            </form>
         </div>
 
         <!-- End of HTML for exercise-1 -->
