get chuck norris quote exercise done

--- a/simpleViteJSApplication/index.html
+++ b/simpleViteJSApplication/index.html
@@ -39,6 +39,8 @@
         <div id="ex2_html" style="display: none">
             <h3>Exercise 2</h3>
             <p id="ex2p">Add your basic HTML for Exercise 2 here</p>
+            <button id="cnQuoteBtn">Get Chuck Norris Quote</button>
+            <p id="cnQuote"></p>
         </div>
         <!-- End of HTML for exercise-2 -->
 
