single page application with our fake server - showing all users in a table works

--- a/simpleViteJSApplication/index.html
+++ b/simpleViteJSApplication/index.html
@@ -21,7 +21,7 @@
             <p>Add your basic HTML for Exercise 1 here</p>
             <ul id="jokes"></ul>
             <form action="#">
-                <input id="inputJokeId" type="number">
+                <input id="inputJokeId" type="number" value="1">
                 <button id="getJoke">GET JOKE</button>
                 <p id="joke"></p>
             </form>
@@ -66,6 +66,11 @@
                             <th>Email</th>
                         </tr>
                         </thead>
+                        <tbody id="tableBody">
+                            
+                        </tbody>
+
+
 
                         <tbody id="allUserRows"></tbody>
                         <tbody></tbody>
