--- a/simpleViteJSApplication/index.html
+++ b/simpleViteJSApplication/index.html
@@ -67,25 +67,67 @@
                         </tr>
                         </thead>
                         <tbody id="tableBody">
-                            
                         </tbody>
 
-
-
-                        <tbody id="allUserRows"></tbody>
-                        <tbody></tbody>
                     </table>
                 </div>
                 <div class="col-md-4" style="background-color: powderblue">
                     <h5>Find User</h5>
+                    <form action="#">
+                        <label for="findUser">Id:</label>
+                        <input type="number" id="findUser">
+                        <button id="searchUserBtn">Search</button><br><br>
+                    </form>
+                    <p id="foundUser"></p>
                 </div>
             </div>
             <div class="row" style="min-height: 5em">
                 <div class="col-md-4" style="background-color: powderblue">
                     <h5>Add User</h5>
+                    <form action="#">
+                        <label for="ageInput" style="margin-right: 21px">Age:</label>
+                        <input type="number" id="ageInput" required min="3" max="99"> <br><br>
+
+                        <label for="nameInput" style="margin-right: 11px">Name: </label>
+                        <input type="text" id="nameInput" required minlength="2"> <br><br>
+
+                        <label for="genders" style="margin-right:4px">Gender:  </label>
+                        <select name="genders" id="genders" required>
+                            <option value="male">male</option>
+                            <option value="female">female</option>
+                        </select> <br> <br>
+
+                        <label for="emailInput" style="margin-right: 11px">Email: </label>
+                        <input type="email" id="emailInput" required> <br><br>
+
+                        <button id="addUserBtn">Add user</button> <br><br>
+                    </form>
+                    <p id="addedUserStatus"></p>
                 </div>
                 <div class="col-md-4" style="background-color: lightgrey">
                     <h5>Edit User</h5>
+                    <form action="#">
+                        <label for="editUserId" style="margin-right: 31px;">Id:</label>
+                        <input id="editUserId" type="number" min="1" required> <br> <br>
+
+                        <label for="editAgeInput" style="margin-right: 21px">Age:</label>
+                        <input type="number" id="editAgeInput" required min="3" max="99"> <br><br>
+
+                        <label for="editNameInput" style="margin-right: 11px">Name: </label>
+                        <input type="text" id="editNameInput" required minlength="2"> <br><br>
+
+                        <label for="editGenders" style="margin-right:4px">Gender:  </label>
+                        <select name="genders" id="editGenders" required>
+                            <option value="male">male</option>
+                            <option value="female">female</option>
+                        </select> <br> <br>
+
+                        <label for="editEmailInput" style="margin-right: 11px">Email: </label>
+                        <input type="email" id="editEmailInput" required> <br><br>
+
+                        <button id="editUserBtn">Edit user</button> <br><br>
+                    </form>
+                    <p id="editedUserStatus"></p>
                 </div>
                 <div class="col-md-4" style="background-color: powderblue">
                     <h5>Delete User</h5>
