fixing user exercise with error handling to the api calls

--- a/simpleViteJSApplication/index.html
+++ b/simpleViteJSApplication/index.html
@@ -78,7 +78,8 @@
                         <input type="number" id="findUser">
                         <button id="searchUserBtn">Search</button><br><br>
                     </form>
-                    <p id="foundUser"></p>
+                    <p id="userFound"></p>
+                    <p id="errors" style="color:red"></p>
                 </div>
             </div>
             <div class="row" style="min-height: 5em">
