fixing user exercise with error handling to the api calls - all methods work with correct error handling

--- a/simpleViteJSApplication/index.html
+++ b/simpleViteJSApplication/index.html
@@ -68,8 +68,8 @@
                         </thead>
                         <tbody id="tableBody">
                         </tbody>
-
                     </table>
+                    <p id="errorMsgFindAllUsers" style="color:red"></p>
                 </div>
                 <div class="col-md-4" style="background-color: powderblue">
                     <h5>Find User</h5>
@@ -79,7 +79,7 @@
                         <button id="searchUserBtn">Search</button><br><br>
                     </form>
                     <p id="userFound"></p>
-                    <p id="errors" style="color:red"></p>
+                    <p id="errorMsgFindUser" style="color:red"></p>
                 </div>
             </div>
             <div class="row" style="min-height: 5em">
@@ -105,6 +105,7 @@
                         <button id="addUserBtn">Add user</button> <br><br>
                     </form>
                     <p id="addedUserStatus"></p>
+                    <p id="errorMsgAddUser" style="color:red"></p>
                 </div>
                 <div class="col-md-4" style="background-color: lightgrey">
                     <h5>Edit User</h5>
@@ -130,6 +131,7 @@
                         <button id="editUserBtn">Edit user</button> <br><br>
                     </form>
                     <p id="editedUserStatus"></p>
+                    <p id="errorMsgEditUser" style="color:red"></p>
                 </div>
                 <div class="col-md-4" style="background-color: powderblue;">
                     <h5>Delete User</h5>
@@ -139,6 +141,7 @@
                         <button id="deleteBtn">Delete</button>
                     </form>
                     <p id="deleteStatus"></p>
+                    <p id="errorMsgDeleteUser" style="color:red"></p>
                 </div>
             </div>
         </div>
